[tool.poetry]
name = "ml-audio"
version = "0.1.0"
description = ""
authors = ["drsh4dow <daniel.morettiv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
librosa = "^0.10.2"
transformers = "^4.40.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
