[tool.poetry]
name = "ml-audio"
version = "0.1.0"
description = ""
authors = ["drsh4dow <daniel.morettiv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
librosa = "^0.10.2"
transformers = "^4.40.1"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
pyqt6 = "^6.7.0"
datasets = {extras = ["audio"], version = "^2.19.0"}
gradio = "^4.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
